k8s/homolog/stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: watink-homolog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watink-backend-homolog
  namespace: watink-homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watink-backend-homolog
  template:
    metadata:
      labels:
        app: watink-backend-homolog
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s3
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: backend
          image: ghcr.io/alltomatos/watinkdev-backend:homol-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: watink-backend-homolog
  namespace: watink-homolog
spec:
  selector:
    app: watink-backend-homolog
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watink-frontend-homolog
  namespace: watink-homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watink-frontend-homolog
  template:
    metadata:
      labels:
        app: watink-frontend-homolog
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s3
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: frontend
          image: ghcr.io/alltomatos/watinkdev-frontend:homol-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: watink-frontend-homolog
  namespace: watink-homolog
spec:
  selector:
    app: watink-frontend-homolog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watink-homolog
  namespace: watink-homolog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: apihomol.watink.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: watink-backend-homolog
                port:
                  number: 8080
    - host: homol.watink.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: watink-frontend-homolog
                port:
                  number: 80
